# CMD-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resources/: map1.txt
src/: ASCIIRenderer.cpp  ASCIIRenderer.h  Component.cpp  Creator.cpp  Creator.h  Factory.cpp  Factory.h  GameObject.cpp  GameObject.h  MapLoader.cpp  Object.cpp  Object.h  Position.h  Scene.cpp  Scene.h  System.cpp  System.h  Transform.cpp  Transform.h
src/Abstract/: Component.cpp  Component.h  Object.cpp  Object.h
src/Components/: ASCIIRenderer.cpp  ASCIIRenderer.h  Enemy.cpp  Enemy.h  PlayerMovement.cpp  PlayerMovement.h  Transform.cpp  Transform.h
src/Engine/: MapLoader.cpp  MapLoader.h  Scene.cpp  Scene.h  System.cpp  System.h  TagManager.cpp  TagManager.h  Time.h
src/Math/: Position.cpp  Position.h
src/Objects/: GameObject.cpp  GameObject.h
src/Utils/: Hashing.cpp  Hashing.h
src/Utils/Input/: Input.cpp  Input.h  KeyCode.h
